--- a/index.html
+++ b/index.html
@@ -1,69 +1,31 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Box Homework</title>
-        <meta charset="utf-8"> 
+        <title>Box-2</title>
+        <meta charset="utf-8">
         <link rel="stylesheet" href="./style.css">
     </head>
     <body>
         <main>
+            <section class="logo">
+                <span>Logo</span>
+            </section>
+            <nav>
+                <span>Navigation</span>
+            </nav>
             <header>
-                <section>
-                    <div class="logo">
-                        <h2>Logo</h2>
-                        <a href="#">Link1</a>
-                        <a href="#">Link2</a>
-                        <a href="#">Link3</a>
-                        <a href="#">Link4</a>
-                        <a href="#">Link5</a>
-                    </div>
-                </section>
-                <section>
-                    <div class="intro">
-                        <h1>Intro</h1>
-                        <p>Some introduction lines about the website or company</p>
-                    </div>
-                    <div class="slider">
-                        <p>Featured Project Slider</p>
-                    </div>
-                </section>
+                <span>Header / Banner</span>
             </header>
             <section>
-                <div class="serv-1">
-                    <span>Services</span>
+                <div class="side-bar">
+                    <span>Side Bar</span>
                 </div>
-                <div class="serv-2">
-                    <span>Services</span>
-                </div>
-                <div class="serv-3">
-                    <span>Services</span>
-                </div>
-            </section>
-            <section>
-                <div class="work-1">
-                    <span>Recent work</span>
-                </div>
-                <div class="work-2">
-                    <span>Recent work</span>
-                </div>
-                <div class="work-3">
-                    <span>Recent work</span>
-                </div>
-            </section>
-            <section>
-                <div class="twitter">
-                    <span>Twitter Feed</span>
+                <div class="body">
+                    <span>Body Area</span>
                 </div>
             </section>
             <footer>
-                <div class="footer">
-                    <a href="#">Link1</a>
-                    <a href="#">Link2</a>
-                    <a href="#">Link3</a>
-                    <a href="#">Link4</a>
-                    <a href="#">Link5</a>
-                    <p>copyright info</p>
-                </div>
+                <span>Footer</span>
             </footer>
         </main>
     </body>
