--- a/index.html
+++ b/index.html
@@ -1,31 +1,86 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Box-2</title>
+        <title>Homework explanation and absolute/relative/fixed/sticky positioning</title>
         <meta charset="utf-8">
-        <link rel="stylesheet" href="./style.css">
+        <link rel="stylesheet" href="./styles.css">
+        <!-- Links -->
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300&display=swap" rel="stylesheet">
     </head>
     <body>
-        <main>
-            <section class="logo">
-                <span>Logo</span>
+        <main id="wrapper">
+            <section id="hero">
+                <div class="section-wrapper">
+                    <header>
+                        <div class="logo">
+                            <h2>Logo</h2>
+                        </div>
+                        <nav class="nav-links">
+                            <nav>
+                                <ul>
+                                    <li><a href="">Link1</a></li>
+                                    <li><a href="">Link2</a></li>
+                                    <li><a href="">Link3</a></li>
+                                    <li><a href="">Link4</a></li>
+                                    <li><a href="">Link5</a></li>
+                                </ul>
+                            </nav>
+                        </nav>
+                    </header>
+                    <div class="hero-content">
+                        <div class="hero-block intro">
+                            <h2>Intro</h2>
+                            <p>Some introduction lines about the website or company.</p>
+                        </div>
+                        <div class="hero-block slider">
+                            <h2>Featured project slider</h2>
+                        </div>
+                    </div>
+                </div>
             </section>
-            <nav>
-                <span>Navigation</span>
-            </nav>
-            <header>
-                <span>Header / Banner</span>
-            </header>
-            <section>
-                <div class="side-bar">
-                    <span>Side Bar</span>
-                </div>
-                <div class="body">
-                    <span>Body Area</span>
-                </div>
+            <section id="content-blocks">
+                <div class="section-wrapper">
+                    <div class="services">
+                        <div class="single-content-block">
+                            <h2>Services</h2>
+                        </div>
+                        <div class="single-content-block">
+                            <h2>Services</h2>
+                        </div>
+                        <div class="single-content-block">
+                            <h2>Services</h2>
+                        </div>
+                    </div>
+                    <div class="recent-work">
+                        <div class="single-content-block">
+                        <h2>Recent work</h2>
+                        </div>
+                        <div class="single-content-block">
+                        <h2>Recent work</h2>
+                        </div>
+                        <div class="single-content-block">
+                        <h2>Recent work</h2>
+                        </div>
+                    </div>
+                    <div class="twitter-feed">
+                    <h2>Twitter feed</h2>
+                    </div>
             </section>
             <footer>
-                <span>Footer</span>
+                <div class="section-wrapper">
+                    <div class="nav-links">
+                        <ul>
+                            <li><a href="">Link1</a></li>
+                            <li><a href="">Link2</a></li>
+                            <li><a href="">Link3</a></li>
+                            <li><a href="">Link4</a></li>
+                            <li><a href="">Link5</a></li>
+                        </ul>
+                    </div>
+                    <span class="copyright">Copyright info</span>
+                </div>
             </footer>
         </main>
     </body>
